# SoftnixLogAgent

./: AGENTS.md  Cargo.toml  PRD.md  README.md  TEST_CASE.md
configs/: agent.dev.toml  agent.syslog.toml
scripts/: build.sh
src/: config.rs  event.rs  lib.rs  main.rs  runtime.rs  shutdown.rs
src/inputs/: file_tail.rs  mod.rs  process.rs  stdin.rs  tcp_listener.rs  udp_listener.rs  windows_eventlog.rs
src/outputs/: mod.rs  stdout.rs  syslog.rs
src/pipeline/: mod.rs
