[package]
name = "softnix_agent"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
hostname = "0.4"
once_cell = "1.19"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.36", features = ["full"] }
tokio-stream = "0.1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[dev-dependencies]
tempfile = "3.10"
